# Forkit_Dev

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/validate-passport/: action.yml
.github/workflows/: ci.yml  release-publish.yml  validate-passport.yml
docs/: comparisons.md  mcp.md  release-checklist.md
docs/assets/: README.md
examples/: cli_quickstart.py  forkit-passport.invalid.json  github_ci_quickstart.py  langchain_quickstart.py  langgraph_runtime_quickstart.py  mcp_quickstart.py  minimal_local_passport.py  register_agent.yaml  register_model.yaml  self_host_sync_quickstart.py  tamper_detection_demo.py
forkit/: __init__.py
forkit/cli/: main.py
forkit/mcp/: __init__.py  server.py
forkit/registry/: local.py
forkit/sdk/: __init__.py  client.py
forkit/server/: app.py
forkit/server/routes/: sync.py  system.py
forkit/sync/: __init__.py  bridge.py
forkit_core/: __init__.py
forkit_core/mcp/: __init__.py  server.py
forkit_core/registry/: local.py
forkit_core/sdk/: __init__.py
forkit_core/sync/: __init__.py
forkit_langchain/: adapter.py
forkit_langgraph/: __init__.py  adapter.py
publish/github-ci-demo/: README.md
publish/github-ci-demo/.github/workflows/: validate-forkit-passport.yml
publish/huggingface-demo/: README.md  SOURCE.md
scripts/: export_hf_model_card.py  generate_passport_template.py  validate_passport.py
tests/: test_examples.py  test_hashing.py  test_langchain_adapter.py  test_langgraph_adapter.py  test_mcp.py  test_registry.py  test_server_bootstrap.py  test_server_sync.py  test_sync_bridge.py
web/src/: App.tsx  index.css  types.ts
web/src/components/: AppShell.tsx  LineageGraph.tsx  PassportCard.tsx
web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx
web/src/hooks/: usePageTitle.ts
web/src/lib/: api.ts  mockApi.ts
web/src/pages/: CreatePassportPage.tsx  DashboardPage.tsx  LandingPage.tsx  LineagePage.tsx  NotFoundPage.tsx  PassportDetailPage.tsx  PassportListPage.tsx  RegistryStatsPage.tsx  SearchPage.tsx  VerifyPassportPage.tsx
