[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forkit-core"
dynamic = ["version"]
description = "Local-first deterministic passports, lineage, and verification for AI models and agents"
readme = "README.md"
license = { text = "Apache-2.0" }
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
  { name = "ForkIt", email = "info@forkit.dev" },
]
keywords = [
  "ai",
  "passport",
  "provenance",
  "lineage",
  "model-passport",
  "agent-passport",
  "offline-first",
  "local-first",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []   # zero hard deps — pure Python 3.10+

[project.optional-dependencies]
pydantic = [
  "pydantic>=2.0",
]
cli = [
  "typer>=0.9",
  "pyyaml>=6.0",
]
langchain = [
  "langchain>=1.2.13",
]
langgraph = [
  "langgraph>=1.1.3",
]
mcp = [
  "mcp[cli]>=1,<2",
]
postgres = [
  "psycopg[binary]>=3.2",
]
server = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
]
all = [
  "pydantic>=2.0",
  "typer>=0.9",
  "pyyaml>=6.0",
  "langchain>=1.2.13",
  "langgraph>=1.1.3",
  "mcp[cli]>=1,<2",
  "psycopg[binary]>=3.2",
  "fastapi>=0.115",
  "uvicorn>=0.30",
]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "ruff",
  "mypy",
  "hatch",
  "pydantic>=2.0",
  "typer>=0.9",
  "pyyaml>=6.0",
  "langchain>=1.2.13",
  "langgraph>=1.1.3",
  "mcp[cli]>=1,<2",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27",
]

[project.scripts]
forkit = "forkit.cli.main:main"
forkit-mcp = "forkit.mcp.server:main"

[project.urls]
Homepage   = "https://github.com/arpitasarker01/Forkit_Dev"
Repository = "https://github.com/arpitasarker01/Forkit_Dev"
Issues     = "https://github.com/arpitasarker01/Forkit_Dev/issues"
Documentation = "https://github.com/arpitasarker01/Forkit_Dev/tree/main/docs"
Changelog = "https://github.com/arpitasarker01/Forkit_Dev/blob/main/CHANGELOG.md"
Security = "https://github.com/arpitasarker01/Forkit_Dev/security/policy"

[tool.hatch.version]
path = "forkit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["forkit", "forkit_core", "forkit_langchain", "forkit_langgraph", "forkit_openclaw"]  # ship both during transition

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["forkit"]
omit = ["tests/*"]
